--- a/cvs.html
+++ b/cvs.html
@@ -20,7 +20,10 @@
           IT pro with over <strong>10 years</strong> of expirience specializing
           in <strong>IT department management</strong> for international
           logistics companies. I can implement effective
-          <strong>IT strategies</strong> at local and global levels.
+          <strong>IT strategies</strong> at local and global levels. My greatest
+          strength is business awareness, which enables me to permanently
+          streamline infrastructure and applications. Looking to leverage my IT
+          Management skills at SanCorp Inc.
         </p>
       </header>
       <section>
@@ -58,6 +61,65 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2><em>Education</em></h2>
+        <h3>
+          1999-09 - 2001-05 Master of Computer Science, University of Maryland
+        </h3>
+        <ul>
+          <li>Graduated Summa Cum Laude.</li>
+          <li>
+            Andersen Postgraduate Fellowship to study advancednursing
+            techniques.
+          </li>
+          <li>
+            Managed a student project to develop a weekly nursing podcast.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2><em>Skills</em></h2>
+        <p>
+          <strong>Business Process Improvement</strong> - history of successful
+          innovations leading to cost savings
+        </p>
+        <p>
+          <strong>Vendor Management</strong> - proven track record of managing
+          vendors in projects with budjets of over $1'000'000
+        </p>
+        <p>
+          <strong>Project Scheduling</strong> - over 90% of projects led were
+          finished in due time
+        </p>
+        <p>
+          <strong>Sales Analysis</strong> - background in IT Sales with deep
+          understanding of negotiating contracts
+        </p>
+      </section>
+      <section>
+        <h2><em>Software</em></h2>
+        <p>Microsoft Project - Excellent</p>
+        <p>Microsoft Windows Server - Very Good</p>
+      </section>
+      <section>
+        <h2><em>Certifications</em></h2>
+        <p>2010-05 PMP - Project Management Institute</p>
+        <p>2007-11 CAMP - Project Management Institute</p>
+      </section>
     </article>
+    <hr />
+    <atricle>
+      <header>
+        <h1><em>Jane Doe</em></h1>
+        <h2></h2>
+        <ul>
+          <li><strong></strong></li>
+          <li><strong></strong></li>
+          <li><strong></strong></li>
+          <li><strong></strong></li>
+        </ul>
+        <p></p>
+      </header>
+    </atricle>
   </body>
 </html>
