--- a/cvs.html
+++ b/cvs.html
@@ -9,6 +9,9 @@
     <article>
       <header>
         <h1><em>John Smith</em></h1>
+        <!--
+          Place for img
+        -->
         <h2>IT Project Manager</h2>
         <ul>
           <li><strong>Phone</strong> 123-23-32</li>
@@ -27,7 +30,7 @@
         </p>
       </header>
       <section>
-        <h2><em>Expirience</em></h2>
+        <h2><em>Experience</em></h2>
         <h3>2006-12 - present Senior Project Manager</h3>
         <p><em>Seton Hospital, ME</em></p>
         <ul>
@@ -107,19 +110,69 @@
         <p>2007-11 CAMP - Project Management Institute</p>
       </section>
     </article>
-    <hr />
+
     <atricle>
       <header>
         <h1><em>Jane Doe</em></h1>
-        <h2></h2>
+        <h2>Freelance Artist</h2>
         <ul>
-          <li><strong></strong></li>
-          <li><strong></strong></li>
-          <li><strong></strong></li>
-          <li><strong></strong></li>
+          <li><strong>Phone</strong> 101-00-11</li>
+          <li><strong>E-mail</strong> DoeArt@webmail.com</li>
+          <li><strong>LinkedIn</strong> linkedin.com/doeart</li>
+          <li><strong>Twitter</strong> @doeart</li>
         </ul>
-        <p></p>
+        <p>
+          Self taught artist with more than <strong>7 years</strong> of
+          expirience specializing in digital art. I specialize in
+          <strong>creating digital art</strong> and Lorem ipsum dolor, sit amet
+          consectetur adipisicing elit. Assumenda optio atque doloribus!
+        </p>
       </header>
+      <section>
+        <h2><em>Experience</em></h2>
+        <h3>2013-04 - present Freelance Artist</h3>
+        <p><em>Somewhere, SW</em></p>
+        <ul>
+          <li>Multiple satisfied clients on Fiverr</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+          <li>Lorem ipsum dolor sit amet</li>
+        </ul>
+      </section>
+      <section>
+        <h2><em>Education</em></h2>
+        <h3>
+          2008-09 - 2013-01 Master in Digital Arts, University of Somewhere
+        </h3>
+        <ul>
+          <li>Graduated with honours.</li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, eos.
+          </li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </section>
+      <section>
+        <h2><em>Skills</em></h2>
+        <p>
+          <strong>Diverse styles</strong> - designed art in multiple styles
+        </p>
+        <p><strong>Lorem, ipsum.</strong> - Lorem ipsum dolor sit amet.</p>
+        <p>
+          <strong>Lorem, ipsum.</strong> - Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Beatae.
+        </p>
+        <p><strong>Lorem, ipsum.</strong> - Lorem ipsum dolor sit.</p>
+      </section>
+      <section>
+        <h2><em>Software</em></h2>
+        <p>Adobe Photoshop - Excellent</p>
+        <p>GIMP - Excellent</p>
+      </section>
+      <section>
+        <h2><em>Certification</em></h2>
+        <p>2015-02 DEF - Online Course Base</p>
+        <p>2014-04 ABC - Online Course Base</p>
+      </section>
     </atricle>
   </body>
 </html>
