--- a/cvs.html
+++ b/cvs.html
@@ -9,9 +9,7 @@
     <article>
       <header>
         <h1><em>John Smith</em></h1>
-        <!--
-          Place for img
-        -->
+        <img src="./img/John_pic.png" alt="John Smith">
         <h2>IT Project Manager</h2>
         <ul>
           <li><strong>Phone</strong> 123-23-32</li>
@@ -114,6 +112,7 @@
     <atricle>
       <header>
         <h1><em>Jane Doe</em></h1>
+        <img src="./img/jane_pic.png" alt="Jane Doe">
         <h2>Freelance Artist</h2>
         <ul>
           <li><strong>Phone</strong> 101-00-11</li>
